tests/control_flow/valid/conditionals/if_else.src
fn main() -> int {
    int x = 3;
    if (x > 5) {
        return 100;
    } else {
        return 0;
    }
}