tests/control_flow/invalid/type_errors/float_to_int.src
fn main() -> int {
    float x = 3.14;
    int y = x;
    return y;
}